src/views/dolphinview.cpp
@@ -1769,11 +1769,9 @@ Qt::SortOrder DolphinView::defaultSortOrderForRole(const QByteArray &role)
 void DolphinView::resetZoomLevel()
 {
     ViewModeSettings settings{m_mode};
-    settings.useDefaults(true);
-    const int defaultIconSize = settings.iconSize();
-    settings.useDefaults(false);
+    const int userDefaultIconSize = settings.iconSize();
 
-    setZoomLevel(ZoomLevelInfo::zoomLevelForIconSize(QSize(defaultIconSize, defaultIconSize)));
+    setZoomLevel(ZoomLevelInfo::zoomLevelForIconSize(QSize(userDefaultIconSize, userDefaultIconSize)));
 }
 
 void DolphinView::observeCreatedItem(const QUrl &url)
